<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.earthlite.lecsupportapp.MainScreen"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">
    <ImageView
        android:id="@+id/background"
        app:srcCompat="@drawable/gradient"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitCenter"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top|center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/lec_banner_transparent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_alignParentBottom="true"
            android:layout_weight="2"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/p_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_glass"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/colorPrimary2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/products"
                android:textAllCaps="true"
                android:padding="10dp"
                android:elevation="2dp" />

            <Button
                android:id="@+id/s_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_glass"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/colorPrimary2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/title_activity_service"
                android:textAllCaps="true"
                android:padding="10dp"
                android:elevation="2dp" />

            <Button
                android:id="@+id/w_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_glass"
                android:foreground="?android:attr/selectableItemBackground"
                android:textColor="@color/colorPrimary2"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/website"
                android:textAllCaps="true"
                android:padding="10dp"
                android:elevation="2dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
