<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.earthlite.lecsupportapp.Service">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/user_info_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:elevation="1dp"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/user_info_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:background="@drawable/rounded_upper"
            android:padding="15dp"
            android:text="@string/user_info_title"
            android:elevation="2dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:background="@drawable/frosted_rounded_lower">
            <ListView
                android:id="@+id/user_field_list"
                style="@style/Widget.AppCompat.ListView"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@color/colorTransparent"
                android:clipToPadding="false"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/request_support"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="2dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/frostedTintedWhite"
                    android:text="@string/request_support" />

                <Button
                    android:id="@+id/call"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:elevation="2dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/frostedTintedWhite"
                    android:text="@string/call" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
